reintroduced bootstrap to the project in order to better align the header elements, solved a naming convention that was causing conflicts in the navbar that i'd previously solved with prior push's workaround. Moved the logo and buttons containers into divs that use bootstrap to better organise the space.

--- a/SCSS/abstracts/_variables.scss
+++ b/SCSS/abstracts/_variables.scss
@@ -2,8 +2,8 @@
 $shadow-light-grey: #ccc;
 $search-border-grey: #999aa2;
 $search-box-highlight: #5bc0de;
-$white-text: #fff;
-$off-white: #ddd;
+$white-text: #ffffff;
+$off-white: #dddddd;
 $off-black: #121419;
 $darkest-blue: #333645;
 
@@ -23,7 +23,7 @@ $telecoms-color-darker:#bc2c28;
 $bespoke-color: #67809f;
 $bespoke-color-darker: #526781;
 
-$marketing-color: #23cc71;
+$marketing-color: #2ecc71;
 $marketing-color-darker:#25a25a;
 
 $security-color: #de093f;
