--- a/SCSS/components/_navbar.scss
+++ b/SCSS/components/_navbar.scss
@@ -1,4 +1,4 @@
-.navbar{
+.navigation-bar{
     border-bottom: #ebebeb 1px solid;
     background-color: $darkest-blue;
     position: relative;   
@@ -235,15 +235,15 @@
 }
 
 
-// Media Queries for the navbar component
+// Media Queries for the navigation-bar component
 
 @media only screen and (max-width:1010px){
-    .navbar{
+    .navigation-bar{
         display: none;
     }
 }
 @media only screen and (min-width:1010px){
-    .navbar{
+    .navigation-bar{
         & > .tab-wrapper{
             width: $screen-lg-min;
             margin: 0 auto;
@@ -262,7 +262,7 @@
 }
 
 @media only screen and (min-width:$screen-xl-min){
-    .navbar{
+    .navigation-bar{
         .tab-wrapper{
             min-width: 1298px;
             margin: 0 auto;
